# HelloGithub

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
